[package]
name = "PP_rust_utilities"
version = "0.1.0"
authors = ["rpaul1 <rpaul1@stjude.org>"]
edition = "2018"
# disable automatic builds for code under src/bin 
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
kodama = "0.3"
rayon = "1.7.0"
bgzip = "0.3.1"
petgraph = "0.6.3"
rusqlite="0.36.0"
ndarray = "0.16.1"
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
nalgebra = {version = "0.32.2", features = ["serde-serialize"]}
plotters = "0.3.4"
colorgrad = "0.6.2"
statrs = "^0.16.0"
fishers_exact="^1.0.1"
bio = "1.5.0"
bigtools = "^0.1.11"
libmath = "^0.2.1"
json = "^0.12.4"
serde = {version = "^1.0.147", features = ["derive"]}
serde_json="^1.0.142"
num = "^0.4.1"
r_mathlib="^0.2.0"
tokio = { version="1", features = ["full"] }
reqwest = "0.12.23"
flate2 = "1"
schemars = "1.0.4"
futures = "0.3" 
num_cpus = "1.16.0"
memchr = "2"
r2d2_sqlite = "0.29.0"
r2d2 = "0.8.10"
rig-core = "0.20.0"
url = "2.5.7"
async-stream = "0.3.6"

[profile.release]
lto = "fat"
codegen-units = 1

# 
# manually define which source code to compile.
# this is to avoid the use of a `src/bin/` folder to 
# hold source code, which goes against the 
# directory naming convention in the Proteinpaint project
# 
[[bin]]
name="align"
path="src/align.rs"

[[bin]]
name="indel"
path="src/indel.rs"

[[bin]]
name="fisher"
path="src/fisher.rs"

[[bin]]
name="bigwig"
path="src/bigwig.rs"

[[bin]]
name="sv"
path="src/sv.rs"

[[bin]]
name="cluster"
path="src/cluster.rs"

[[bin]]
name="gdcmaf"
path="src/gdcmaf.rs"

[[bin]]
name="topGeneByExpressionVariance"
path="src/topGeneByExpressionVariance.rs"

[[bin]]
name="wilcoxon"
path="src/wilcoxon.rs"

[[bin]]
name="DEanalysis"
path="src/DEanalysis.rs"

[[bin]]
name="genesetORA"
path="src/genesetORA.rs"

[[bin]]
name="computeTopTerms"
path="src/computeTopTerms.rs"

[[bin]]
name="readHDF5"
path="src/readHDF5.rs"

[[bin]]
name="validateHDF5"
path="src/validateHDF5.rs"

[[bin]]
name="gdcGRIN2"
path="src/gdcGRIN2.rs"

[[bin]]
name="cerno"
path="src/cerno.rs"

[[bin]]
name="readH5"
path="src/readH5.rs"

[[bin]]
name="aichatbot"
path="src/aichatbot.rs"

