[package]
name = "rust_indel"
version = "0.1.0"
authors = ["rpaul1 <rpaul1@stjude.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_indel"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
#web-sys = "*"
web-sys = {version = "0.3.45", features = ["console"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false