[package]
name = "bam"
version = "0.1.0"
authors = ["rpaul1 <rpaul1@stjude.org>"]
edition = "2018"
# disable automatic builds for code under src/bin 
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "^0.15"
fishers_exact="^1.0"
bio = "^0.39"

[profile.release]
lto = "fat"
codegen-units = 1

# 
# manually define which source code to compile.
# this is to avoid the use of a `src/bin/` folder to 
# hold source code, which goes against the 
# directory naming convention in the Proteinpaint project
# 
[[bin]]
name="align"
path="src/align.rs"

[[bin]]
name="indel"
path="src/indel.rs"

[[bin]]
name="fisher"
path="src/fisher.rs"
