[package]
name = "rust_indel_cargo"
version = "0.1.0"
authors = ["rpaul1 <robinpaul85@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorial = "*"
statrs = "*"
[profile.release]
lto = "fat"
codegen-units = 1