[package]
name = 'RustRUtilities'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'RustRUtilities'

[dependencies]
hdf5 = { package = "hdf5-metno", version = "0.9.0" }
extendr-api = '0.8.0'
itertools="^0.10.0"
r_mathlib="^0.2.0"
nalgebra = {version = "0.32.2"}
statrs = "^0.16.0"
json = "^0.12.4"
csv = "^1.2.2"
serde_json="^1.0.88"
serde = {version = "^1.0.147", features = ["derive"]}